# aws-devops-agent

./: .env.example  .gitignore  CONTEXT.md  README.md  pyproject.toml
.kiro/agents/: aidlc-architecture-reviewer-agent.json  aidlc-systems-architect-agent.json
.kiro/hooks/: process-checker.kiro.hook
.kiro/skills/aidlc-kickoff/: SKILL.md
.kiro/skills/aidlc-orchestration/: SKILL.md
.kiro/skills/aidlc-stage-execution/: SKILL.md
.kiro/skills/aidlc-workflow-composition/: SKILL.md
.kiro/stages/domain-design/: definition.md
.kiro/stages/functional-design/: definition.md
docs/: ARCHITECTURE-IMPROVEMENT-PLAN.md  DEPLOY-EXISTING-VPC.md  DEPLOYMENT.md
docs/adr/: 0001-claim-and-guard.md
infra/terraform/: backend.hcl.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
org-ai-kb/aidlc-docs/intent-001-slack-devops-agent/: intent.md  workflow.json
scripts/: bootstrap-backend.sh  build-lambda.sh  deploy.env.example  deploy.sh  kiro-creds-to-secret.sh  load-secrets.sh
src/slack_devops_agent/: __init__.py
src/slack_devops_agent/components/: __init__.py
src/slack_devops_agent/config/: __init__.py  settings.py
src/slack_devops_agent/domain/: __init__.py  entities.py  enums.py  rules.py  state_machine.py
src/slack_devops_agent/entrypoints/: __init__.py  dispatch.py  lambda_intake.py  (+3 more)
tests/: conftest.py  fakes.py  test_adapters.py  test_claim.py  test_domain.py  test_entrypoints.py  test_glue.py  test_heartbeat.py  test_inference.py  test_intake.py  test_mcp.py  test_queue.py  test_resilience.py  test_safety.py  test_worker.py
(+122 files in other folders)
