[project]
name = "slack-devops-agent"
version = "0.1.0"
description = "Slack DevOps Agent Bot — UNIT-001 (modular monolith: intake + worker + reaper roles)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "slack-bolt>=1.18.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "boto3>=1.34.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "moto[dynamodb,sqs]>=5.0.0",
    "respx>=0.21.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "boto3-stubs[dynamodb,sqs,bedrock-runtime]>=1.34.0",
    "bandit>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slack_devops_agent"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "C4"]
ignore = ["N818"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.12"
strict = true
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
plugins = ["pydantic.mypy"]
mypy_path = "src"
packages = ["slack_devops_agent"]

[[tool.mypy.overrides]]
module = ["slack_bolt.*", "moto.*", "respx.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]

[tool.coverage.run]
source = ["slack_devops_agent"]
branch = true
